# system-test-haskell

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Main.hs  README.md  stack.yaml  system-test.cabal
examples/: helloworld.txt  test.json
src/: Main.hs  Parser.hs  Test.hs
src/SystemTest/: Main.hs  Test.hs
src/Test/SystemTest/: Main.hs  Test.hs
tests/system/: tests.json
tests/unit/: Main.hs  UnitTestsMain.hs
