name:                 system-test
version:              0.1.0
synopsis:             Runs system tests of applications.
-- description:
-- license:
-- license-file:
homepage:             
author:               Christopher Wells
maintainer:           cwellsny@nycap.rr.com
category:             Testing
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable system-test
  main-is:              Main.hs
  other-modules:        Test, Parser
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5,
                        process >= 1.2.0.0,
                        split >= 0.2.3
  hs-source-dirs:       src
  default-language:     Haskell2010
